# fzftask

./: CLAUDE.md  Cargo.toml  HOMEBREW.md  README.md  Taskfile.yml  install.sh
.claude/skills/release/: SKILL.md
.github/workflows/: release.yml
Formula/: fzftask.rb
shell/: fzftask.zsh
src/: main.rs  taskfile.rs
taskfiles/: docs.yml
