[package]
name = "fzftask"
version = "0.1.0"
edition = "2024"
description = "An fzf-style terminal UI for browsing and running Taskfile tasks, built with ratatui"
license = "MIT"
repository = "https://github.com/gsy0911/fzftask"
keywords = ["tui", "taskfile", "terminal", "task", "fzf"]
categories = ["command-line-utilities", "development-tools"]
authors = ["gsy0911"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml_ng = "0.10.0"
indexmap = { version = "2.14.0", features = ["serde"] }
